@@ -41,6 +41,14 @@
 /**
  * @brief Boolean Type definition
  */
+#ifdef TRUE
+#undef TRUE
+#endif
+
+#ifdef FALSE
+#undef FALSE
+#endif
+
 typedef enum {FALSE = 0, TRUE = !FALSE} Bool;
 
 /**
