@@ -13,6 +13,14 @@ extern void cpu_init(unsigned long int frequency);
 #include <spi.h>
 #include <stm32f10x.h>
 
+#ifndef TRUE
+#define TRUE			1
+#endif
+
+#ifndef FALSE
+#define FALSE			0
+#endif
+
 #define CPUFREQ			SystemCoreClock
 
 #ifndef DEFAULT_CPU_FREQ
