@@ -113,5 +113,5 @@ int main(void)
     if ((x == 0) && (y == 0)) break;
   }
 
-  assert(0);
+  assert(FALSE);
 }
